--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mppbase"]
 	path = mppbase
 	url = git@github.com:evgeniy1294/mppbase.git
+[submodule "mppalg"]
+	path = mppalg
+	url = git@github.com:evgeniy1294/mppalg.git
